@@ -1,10 +1,8 @@
 package com.jlh.jlhautopambackend.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.jlh.jlhautopambackend.config.JwtAuthenticationFilter;
-import com.jlh.jlhautopambackend.dto.AdministrateurRequest;
-import com.jlh.jlhautopambackend.dto.AdministrateurResponse;
-import com.jlh.jlhautopambackend.services.AdministrateurService;
+import com.jlh.jlhautopambackend.modeles.Administrateur;
+import com.jlh.jlhautopambackend.repositories.AdministrateurRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -16,8 +14,8 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -37,31 +35,29 @@ class AdministrateurControllerTest {
     private ObjectMapper objectMapper;
 
     @MockitoBean
-    private AdministrateurService service;
-
-    @MockitoBean
-    private com.jlh.jlhautopambackend.utils.JwtUtil jwtUtil;
-
-    @MockitoBean
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
+    private AdministrateurRepository adminRepo;
 
     @Test
     @DisplayName("GET /api/administrateurs ➔ 200, json list")
     void testGetAll() throws Exception {
-        AdministrateurResponse r1 = AdministrateurResponse.builder()
+        Administrateur a1 = Administrateur.builder()
                 .idAdmin(1)
-                .email("alice")
-                .nom("Alice").prenom("A")
+                .username("alice")
+                .motDePasse("password1")
+                .nom("Alice")
+                .prenom("A")
                 .disponibilites(Collections.emptyList())
                 .build();
-        AdministrateurResponse r2 = AdministrateurResponse.builder()
+        Administrateur a2 = Administrateur.builder()
                 .idAdmin(2)
-                .email("bob")
-                .nom("Bob").prenom("B")
+                .username("bob")
+                .motDePasse("password2")
+                .nom("Bob")
+                .prenom("B")
                 .disponibilites(Collections.emptyList())
                 .build();
 
-        Mockito.when(service.findAll()).thenReturn(List.of(r1, r2));
+        Mockito.when(adminRepo.findAll()).thenReturn(Arrays.asList(a1, a2));
 
         mvc.perform(get("/api/administrateurs").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -73,14 +69,15 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("GET /api/administrateurs/{id} ➔ 200")
     void testGetByIdFound() throws Exception {
-        AdministrateurResponse resp = AdministrateurResponse.builder()
+        Administrateur a = Administrateur.builder()
                 .idAdmin(1)
-                .email("alice")
-                .nom("Alice").prenom("A")
+                .username("alice")
+                .motDePasse("password1")
+                .nom("Alice")
+                .prenom("A")
                 .disponibilites(Collections.emptyList())
                 .build();
-
-        Mockito.when(service.findById(1)).thenReturn(Optional.of(resp));
+        Mockito.when(adminRepo.findById(1)).thenReturn(Optional.of(a));
 
         mvc.perform(get("/api/administrateurs/1").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -90,7 +87,7 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("GET /api/administrateurs/{id} ➔ 404")
     void testGetByIdNotFound() throws Exception {
-        Mockito.when(service.findById(99)).thenReturn(Optional.empty());
+        Mockito.when(adminRepo.findById(99)).thenReturn(Optional.empty());
 
         mvc.perform(get("/api/administrateurs/99").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
@@ -99,23 +96,26 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("POST /api/administrateurs ➔ 201, Location header")
     void testCreate() throws Exception {
-        AdministrateurRequest req = AdministrateurRequest.builder()
-                .email("charlie")
+        Administrateur in = Administrateur.builder()
+                .username("charlie")
                 .motDePasse("pwd3")
-                .nom("Charlie").prenom("C")
-                .build();
-        AdministrateurResponse created = AdministrateurResponse.builder()
-                .idAdmin(3)
-                .email("Charlie").prenom("C")
+                .nom("Charlie")
+                .prenom("C")
                 .disponibilites(Collections.emptyList())
                 .build();
-
-        Mockito.when(service.create(Mockito.any(AdministrateurRequest.class)))
-                .thenReturn(created);
+        Administrateur saved = Administrateur.builder()
+                .idAdmin(3)
+                .username("charlie")
+                .motDePasse("pwd3")
+                .nom("Charlie")
+                .prenom("C")
+                .disponibilites(Collections.emptyList())
+                .build();
+        Mockito.when(adminRepo.save(Mockito.any())).thenReturn(saved);
 
         mvc.perform(post("/api/administrateurs")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(req)))
+                        .content(objectMapper.writeValueAsString(in)))
                 .andExpect(status().isCreated())
                 .andExpect(header().string("Location", "/api/administrateurs/3"))
                 .andExpect(jsonPath("$.idAdmin").value(3))
@@ -125,39 +125,52 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("PUT /api/administrateurs/{id} ➔ 200 when exists")
     void testUpdateFound() throws Exception {
-        AdministrateurRequest updates = AdministrateurRequest.builder()
-                .email("alice2")
-                .motDePasse("newpwd")
-                .nom("Alice").prenom("A2")
-                .build();
-        AdministrateurResponse updated = AdministrateurResponse.builder()
+        Administrateur existing = Administrateur.builder()
                 .idAdmin(1)
-                .email("alice2")
-                .nom("Alice").prenom("A2")
+                .username("alice")
+                .motDePasse("pwd1")
+                .nom("Alice")
+                .prenom("A")
+                .disponibilites(Collections.emptyList())
+                .build();
+        Administrateur updates = Administrateur.builder()
+                .username("alice2")
+                .motDePasse("newpwd")
+                .nom("Alice")
+                .prenom("A2")
+                .disponibilites(Collections.emptyList())
+                .build();
+        Administrateur saved = Administrateur.builder()
+                .idAdmin(1)
+                .username("alice2")
+                .motDePasse("newpwd")
+                .nom("Alice")
+                .prenom("A2")
                 .disponibilites(Collections.emptyList())
                 .build();
 
-        Mockito.when(service.update(Mockito.eq(1), Mockito.any(AdministrateurRequest.class)))
-                .thenReturn(Optional.of(updated));
+        Mockito.when(adminRepo.findById(1)).thenReturn(Optional.of(existing));
+        Mockito.when(adminRepo.save(Mockito.any())).thenReturn(saved);
 
         mvc.perform(put("/api/administrateurs/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(updates)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.username").value("alice2"));
+                .andExpect(jsonPath("$.username").value("alice2"))
+                .andExpect(jsonPath("$.motDePasse").value("newpwd"));
     }
 
     @Test
     @DisplayName("PUT /api/administrateurs/{id} ➔ 404 when not found")
     void testUpdateNotFound() throws Exception {
-        AdministrateurRequest updates = AdministrateurRequest.builder()
-                .email("doesnt")
+        Administrateur updates = Administrateur.builder()
+                .username("doesnt")
                 .motDePasse("none")
-                .nom("No").prenom("One")
+                .nom("No")
+                .prenom("One")
+                .disponibilites(Collections.emptyList())
                 .build();
-
-        Mockito.when(service.update(Mockito.eq(42), Mockito.any(AdministrateurRequest.class)))
-                .thenReturn(Optional.empty());
+        Mockito.when(adminRepo.findById(42)).thenReturn(Optional.empty());
 
         mvc.perform(put("/api/administrateurs/42")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -168,7 +181,7 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("DELETE /api/administrateurs/{id} ➔ 204 when exists")
     void testDeleteFound() throws Exception {
-        Mockito.when(service.delete(1)).thenReturn(true);
+        Mockito.when(adminRepo.existsById(1)).thenReturn(true);
 
         mvc.perform(delete("/api/administrateurs/1"))
                 .andExpect(status().isNoContent());
@@ -177,7 +190,7 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("DELETE /api/administrateurs/{id} ➔ 404 when not found")
     void testDeleteNotFound() throws Exception {
-        Mockito.when(service.delete(99)).thenReturn(false);
+        Mockito.when(adminRepo.existsById(99)).thenReturn(false);
 
         mvc.perform(delete("/api/administrateurs/99"))
                 .andExpect(status().isNotFound());
